Fix visibility of footer on non mobile page variant

--- a/src/web-ui/src/app/app.component.scss
+++ b/src/web-ui/src/app/app.component.scss
@@ -27,8 +27,8 @@
   flex-direction: column;
   justify-content: space-between;
   width: 280px;
-  height: 100%;
-  margin-top: 50px;
+  height: 95%;
+  margin-top: 5%;
   background-color: var(--aswg-bg-primary-bg-color);
 }
 
